# probmods

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  style.yml
docs/: Makefile  api.rst  conf.py
probmods/: __init__.py  bijection.py  model.py  test.py
tests/: test_bijection.py  test_model.py  test_test.py  util.py
