[metadata]
name = probmods
version = 0.1.0
author = Wessel Bruinsma
author_email = wessel.p.bruinsma@gmail.com
description = An interface to facilitate rapid development and deployment of probabilistic models
url = https://github.com/wesselb/probmods
license = MIT
license_file = LICENCE.txt
long_description = file: README.md
long_description_content_type = text/markdown